# dessplay

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix  testdata
.claude/: settings.json
.claude/hooks/: protect-files.sh
.claude/skills/tmux-testing/: SKILL.md
dessplay/: Cargo.toml
dessplay-core/: Cargo.toml
dessplay-core/src/: ed2k.rs  framing.rs  lib.rs  protocol.rs  sync_engine.rs  time_sync.rs  types.rs  view_spec.rs
dessplay-core/src/crdt/: chat.rs  lww.rs  mod.rs  playlist.rs  version.rs
dessplay-core/src/network/: mod.rs  simulated.rs
dessplay-core/tests/: proptest_convergence.rs  serialization_roundtrip.rs  sync_convergence.rs
dessplay-rendezvous/: Cargo.toml
dessplay-rendezvous/src/: dump.rs  lib.rs  main.rs  quic.rs  server.rs  storage.rs
dessplay-rendezvous/src/anidb/: client.rs  worker.rs
dessplay/src/: app_state.rs  device_rate.rs  dump.rs  lib.rs  main.rs  media_scanner.rs  peer_conn.rs  quic.rs  rendezvous_client.rs  series_browser.rs  storage.rs  tls.rs
dessplay/src/player/: echo.rs  mock.rs  mod.rs  mpv.rs
dessplay/src/tui/: display_data.rs  input.rs  layout.rs  mod.rs  renderer.rs  resolve.rs  runner.rs  terminal.rs  tests.rs  ui_state.rs  view.rs
dessplay/src/tui/snapshots/: dessplay__tui__tests__snapshot_tests__chat_empty.snap  dessplay__tui__tests__snapshot_tests__chat_with_messages.snap  dessplay__tui__tests__snapshot_tests__keybinding_bar_chat.snap  dessplay__tui__tests__snapshot_tests__keybinding_bar_playlist.snap  dessplay__tui__tests__snapshot_tests__keybinding_bar_recent_series.snap  dessplay__tui__tests__snapshot_tests__main_layout_120x40.snap  dessplay__tui__tests__snapshot_tests__main_layout_80x24.snap  dessplay__tui__tests__snapshot_tests__player_status_idle.snap  dessplay__tui__tests__snapshot_tests__player_status_playing.snap  dessplay__tui__tests__snapshot_tests__playlist_empty.snap  dessplay__tui__tests__snapshot_tests__playlist_with_items.snap  dessplay__tui__tests__snapshot_tests__settings_all_empty.snap  dessplay__tui__tests__snapshot_tests__settings_all_valid.snap  dessplay__tui__tests__snapshot_tests__settings_invalid_server.snap  dessplay__tui__tests__snapshot_tests__settings_with_alert.snap  dessplay__tui__tests__snapshot_tests__users_all_ready.snap  dessplay__tui__tests__snapshot_tests__users_mixed_states.snap  dessplay__tui__tests__snapshot_tests__users_no_peers.snap
dessplay/src/tui/widgets/: chat.rs  file_browser.rs  hashing_progress.rs  keybinding_bar.rs  metadata_assign.rs  mod.rs  player_status.rs  playlist.rs  recent_series.rs  settings.rs  tofu_warning.rs  users.rs
dessplay/tests/: network_integration.rs
docs/: design.md  network-design.md  plan.md  sync-state.md  testing-strategy.md  ui-architecture.md
fuzz/: Cargo.toml  run.sh
fuzz/fuzz_targets/: app_state.rs  chat_gap_fill.rs  crdt_convergence.rs  crdt_op.rs  framing_deserialize.rs  lww_filestate_convergence.rs  multi_peer_sync.rs  network_sim.rs  ops_since.rs  playlist_targeted.rs  postcard_deserialize.rs  render_viewspec.rs  resolve_viewspec.rs  snapshot_roundtrip.rs  sync_engine.rs  time_sync_convergence.rs
scripts/: tmux.sh
src/: lib.rs  main.rs  player_loop.rs
src/files/: scanner.rs
src/network/: clock.rs  mod.rs  quic.rs  rendezvous.rs  sync.rs  wire.rs
src/player/: bridge.rs  error.rs  events.rs  mod.rs
src/player/mpv/: ipc.rs  mod.rs  protocol.rs
src/state/: mod.rs  playlist.rs  types.rs
src/storage/: mod.rs  schema.rs
src/tui/: input.rs  layout.rs  mod.rs  modal.rs  series_state.rs
src/tui/panes/: chat.rs  keybindings.rs  mod.rs  playlist.rs  series.rs  status.rs  users.rs
tests/: app_channels_test.rs  clock_sync_test.rs  mpv_fuzz.rs  mpv_integration.rs  network_fault_scenarios.rs  network_fuzz.rs  quic_integration.rs  rendezvous_test.rs  simulated_network_test.rs  sync_engine_test.rs
tests/common/: convergence.rs  mod.rs  simulated_network.rs  workload.rs
