[package]
name = "dessplay"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "signal", "test-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
nix = { version = "0.29", features = ["signal"] }
rand = "0.9"
