[package]
name = "dessplay"
version = "0.1.0"
edition = "2024"
default-run = "dessplay"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
directories = "6"
postcard = { version = "1", features = ["alloc"] }
quinn = "0.11"
ratatui = "0.29"
rcgen = "0.13"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "signal", "test-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "dessplay-rendezvous"
path = "src/bin/rendezvous.rs"

[dev-dependencies]
nix = { version = "0.29", features = ["signal"] }
rand = "0.9"
tempfile = "3"
