[package]
name = "dessplay-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
fuzz = ["arbitrary"]

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
ed2k = "1"
bitvec = { version = "1", features = ["serde"] }
digest = "0.10"
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
