[package]
name = "dessplay-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
fuzzing = ["arbitrary"]

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
ed2k = "1"
digest = "0.10"
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
