[package]
name = "dessplay-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
fuzzing = ["arbitrary"]

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
ed2k = "1"
digest = "0.10"
tokio = { version = "1", features = ["io-util", "sync", "time", "macros", "rt"] }
rand = "0.9"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "test-util"] }
