[package]
name = "dessplay-rendezvous"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
dessplay-core = { path = "../dessplay-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
postcard = { version = "1", features = ["alloc"] }
anyhow = "1"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
tokio = { version = "1", features = ["full", "test-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
