[package]
name = "dessplay"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
dessplay-core = { path = "../dessplay-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
postcard = { version = "1", features = ["alloc"] }
dirs = "6"
anyhow = "1"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
ring = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"
serde_json = "1"

[features]
mpv-tests = []

[dev-dependencies]
dessplay-rendezvous = { path = "../dessplay-rendezvous" }
insta = "1"
