[package]
name = "dessplay-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dessplay-core = { path = "../dessplay-core", features = ["fuzzing"] }
dessplay = { path = "../dessplay" }
arbitrary = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
tokio = { version = "1", features = ["rt", "time", "macros"] }

# --- Existing targets ---

[[bin]]
name = "crdt_op"
path = "fuzz_targets/crdt_op.rs"
doc = false

[[bin]]
name = "crdt_convergence"
path = "fuzz_targets/crdt_convergence.rs"
doc = false

[[bin]]
name = "snapshot_roundtrip"
path = "fuzz_targets/snapshot_roundtrip.rs"
doc = false

[[bin]]
name = "ops_since"
path = "fuzz_targets/ops_since.rs"
doc = false

# --- Targeted targets ---

[[bin]]
name = "lww_filestate_convergence"
path = "fuzz_targets/lww_filestate_convergence.rs"
doc = false

[[bin]]
name = "chat_gap_fill"
path = "fuzz_targets/chat_gap_fill.rs"
doc = false

[[bin]]
name = "playlist_targeted"
path = "fuzz_targets/playlist_targeted.rs"
doc = false

[[bin]]
name = "postcard_deserialize"
path = "fuzz_targets/postcard_deserialize.rs"
doc = false

[[bin]]
name = "multi_peer_sync"
path = "fuzz_targets/multi_peer_sync.rs"
doc = false

[[bin]]
name = "framing_deserialize"
path = "fuzz_targets/framing_deserialize.rs"
doc = false

[[bin]]
name = "time_sync_convergence"
path = "fuzz_targets/time_sync_convergence.rs"
doc = false

[[bin]]
name = "network_sim"
path = "fuzz_targets/network_sim.rs"
doc = false

[[bin]]
name = "sync_engine"
path = "fuzz_targets/sync_engine.rs"
doc = false

[[bin]]
name = "app_state"
path = "fuzz_targets/app_state.rs"
doc = false
